...
                    contentScale = ContentScale.Fit
                )
            }
            
            //Spacer(Modifier.height(28.dp))
            
            Text("SMARTFIT", style = MaterialTheme.typography.displaySmall,
                fontWeight = FontWeight.Black, color = Color.White.copy(alpha = alpha),
                letterSpacing = 10.sp)
            
            Spacer(Modifier.height(8.dp))
            
            Text("Track · Move · Fuel · Win",
...
